# Compiler-for-MiniLang

./: CMakeLists.txt  Main.cpp  README.md  Test.txt  TestCode.txt  oxxena.txt
ClassLib/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  Visitor.cpp
ClassLib/ParserNodes/: 1MainHeader.h  ActualParams.cpp  ActualParams.h  Assignment.cpp  Assignment.h  Block.cpp  Block.h  Expression.cpp  Expression.h  Factor.cpp  Factor.h  FnCall.cpp  FnCall.h  FnDec.cpp  FnDec.h  ForState.cpp  ForState.h  FormalParam.cpp  FormalParams.cpp  FormalParams.h  IfState.cpp  IfState.h  MainHeader.h  PrintState.cpp  PrintState.h  Program.cpp  Program.h  ReturnState.cpp  ReturnState.h  SimpleExpr.cpp  SimpleExpr.h  Statement.cpp  Statement.h  SubExpression.cpp  SubExpression.h  Term.cpp  Term.h  Unary.cpp  Unary.h  VarDec.cpp  (+1 more)
build-dir/: CMakeCache.txt  Compiler  Makefile  cmake_install.cmake
